letter-spacing fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -849,8 +849,8 @@ button {
 }
 .modal-comment::placeholder {
   font-size: 14px;
-  line-height: 16px;
-  letter-spacing: 1.14;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
 .data-form-label {
@@ -874,6 +874,7 @@ button {
   justify-content: center;
   width: 16px;
   height: 15px;
+  cursor: pointer;
   border-radius: 2px;
   border: 2px solid rgba(33, 33, 33, 0.2);
   margin-right: 7px;
